SUBDIRS = src

desktopdir = $(datadir)/applications
desktop_DATA = resources/bibliographer.desktop

iconsdir = $(datadir)/pixmaps
icons_DATA = resources/bibliographer.png

man1_MANS = resources/bibliographer.man

EXTRA_DIST = resources/bibliographer.png \
	resources/bibliographer.desktop \
	resources/bibliographer_records \
	resources/bibliographer_fields \
	resources/bibliographer.man \
	resources/error.png

